{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 434,
  "lineage": "10401950-59e3-0b00-33f2-91b3c8ec77c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "customer-management-nat-gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7d764ced87f71ab",
            "association_id": "eipassoc-0aaf0040bdda5b529",
            "domain": "vpc",
            "id": "eipalloc-0d7d764ced87f71ab",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08b759d5c8c9eabdb",
            "private_dns": "ip-10-0-1-105.ec2.internal",
            "private_ip": "10.0.1.105",
            "public_dns": "ec2-52-73-177-254.compute-1.amazonaws.com",
            "public_ip": "52.73.177.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "customer-management-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:internet-gateway/igw-0af8d020d71d021e8",
            "id": "igw-0af8d020d71d021e8",
            "owner_id": "218459525783",
            "tags": {
              "Name": "customer-management-igw"
            },
            "tags_all": {
              "Name": "customer-management-igw"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "customer-management-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218459525783:loadbalancer/app/customer-management-alb/ea4e6856d16df005",
            "arn_suffix": "app/customer-management-alb/ea4e6856d16df005",
            "desync_mitigation_mode": "defensive",
            "dns_name": "customer-management-alb-282686786.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:218459525783:loadbalancer/app/customer-management-alb/ea4e6856d16df005",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "customer-management-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0edaeed68c196fcbc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a1018628ee65642"
              },
              {
                "subnet_id": "subnet-0758803fa0b7f6a47"
              },
              {
                "subnet_id": "subnet-08b31641b86ad614b"
              }
            ],
            "subnets": [
              "subnet-04a1018628ee65642",
              "subnet-0758803fa0b7f6a47",
              "subnet-08b31641b86ad614b"
            ],
            "tags": {
              "Name": "customer-management-alb"
            },
            "tags_all": {
              "Name": "customer-management-alb"
            },
            "vpc_id": "vpc-0c16e12295e438ba8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.customer-management-alb-sg",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "customer-management-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218459525783:listener/app/customer-management-alb/ea4e6856d16df005/d25a4ca31b6b2de4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218459525783:targetgroup/customer-management-target-group/20a425f136a2014f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218459525783:listener/app/customer-management-alb/ea4e6856d16df005/d25a4ca31b6b2de4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:218459525783:loadbalancer/app/customer-management-alb/ea4e6856d16df005",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.customer-management-alb",
            "aws_lb_target_group.customer-management-target-group",
            "aws_security_group.customer-management-alb-sg",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_to_cdp_bi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218459525783:targetgroup/cm-target-group-ec2/28f7eb01b1a653b2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218459525783:listener-rule/app/customer-management-alb/ea4e6856d16df005/d25a4ca31b6b2de4/89041bd7d08bb7ce",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/forward_to/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218459525783:listener-rule/app/customer-management-alb/ea4e6856d16df005/d25a4ca31b6b2de4/89041bd7d08bb7ce",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:218459525783:listener/app/customer-management-alb/ea4e6856d16df005/d25a4ca31b6b2de4",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.customer-management-alb",
            "aws_lb_listener.customer-management-alb-listener",
            "aws_lb_target_group.customer-management-target-group",
            "aws_lb_target_group.customer-management-target-group-ec2",
            "aws_security_group.customer-management-alb-sg",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "customer-management-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218459525783:targetgroup/customer-management-target-group/20a425f136a2014f",
            "arn_suffix": "targetgroup/customer-management-target-group/20a425f136a2014f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/healthcheck",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218459525783:targetgroup/customer-management-target-group/20a425f136a2014f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "customer-management-target-group",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "customer-management-target-group-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218459525783:targetgroup/cm-target-group-ec2/28f7eb01b1a653b2",
            "arn_suffix": "targetgroup/cm-target-group-ec2/28f7eb01b1a653b2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218459525783:targetgroup/cm-target-group-ec2/28f7eb01b1a653b2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cm-target-group-ec2",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "customer-management-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7d764ced87f71ab",
            "association_id": "eipassoc-0aaf0040bdda5b529",
            "connectivity_type": "public",
            "id": "nat-0d2a17a283391dcd3",
            "network_interface_id": "eni-08b759d5c8c9eabdb",
            "private_ip": "10.0.1.105",
            "public_ip": "52.73.177.254",
            "subnet_id": "subnet-0758803fa0b7f6a47",
            "tags": {
              "Name": "customer-management-nat-gw"
            },
            "tags_all": {
              "Name": "customer-management-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.customer-management-nat-gateway-eip",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer-management-private-db-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:route-table/rtb-088e9663feacc4c50",
            "id": "rtb-088e9663feacc4c50",
            "owner_id": "218459525783",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d2a17a283391dcd3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customer-management-private-db-rt"
            },
            "tags_all": {
              "Name": "customer-management-private-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.customer-management-nat-gateway-eip",
            "aws_nat_gateway.customer-management-nat-gateway",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer-management-private-rs-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:route-table/rtb-0c4cec5f6e3ad334f",
            "id": "rtb-0c4cec5f6e3ad334f",
            "owner_id": "218459525783",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d2a17a283391dcd3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customer-management-private-rs-rt"
            },
            "tags_all": {
              "Name": "customer-management-private-rs-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.customer-management-nat-gateway-eip",
            "aws_nat_gateway.customer-management-nat-gateway",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer-management-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:route-table/rtb-0f5ee931a72ef0d96",
            "id": "rtb-0f5ee931a72ef0d96",
            "owner_id": "218459525783",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af8d020d71d021e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customer-management-public-rt"
            },
            "tags_all": {
              "Name": "customer-management-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.customer-management-igw",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer-management-private-db-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056a1e4994f738c52",
            "route_table_id": "rtb-088e9663feacc4c50",
            "subnet_id": "subnet-0b541aeb878584a62"
          },
          "dependencies": [
            "aws_eip.customer-management-nat-gateway-eip",
            "aws_nat_gateway.customer-management-nat-gateway",
            "aws_route_table.customer-management-private-db-rt",
            "aws_subnet.customer-management-private-db",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2ff9d1d944e3bde",
            "route_table_id": "rtb-088e9663feacc4c50",
            "subnet_id": "subnet-0dea5c6fedb3b5e2f"
          },
          "dependencies": [
            "aws_eip.customer-management-nat-gateway-eip",
            "aws_nat_gateway.customer-management-nat-gateway",
            "aws_route_table.customer-management-private-db-rt",
            "aws_subnet.customer-management-private-db",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff2aaa84174a235b",
            "route_table_id": "rtb-088e9663feacc4c50",
            "subnet_id": "subnet-07c28b63f5c4dc344"
          },
          "dependencies": [
            "aws_eip.customer-management-nat-gateway-eip",
            "aws_nat_gateway.customer-management-nat-gateway",
            "aws_route_table.customer-management-private-db-rt",
            "aws_subnet.customer-management-private-db",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer-management-private-rs-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa017c0f52f4f745",
            "route_table_id": "rtb-0c4cec5f6e3ad334f",
            "subnet_id": "subnet-020e75e062e45500a"
          },
          "dependencies": [
            "aws_eip.customer-management-nat-gateway-eip",
            "aws_nat_gateway.customer-management-nat-gateway",
            "aws_route_table.customer-management-private-rs-rt",
            "aws_subnet.customer-management-private-rs",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caa0a87fd60609f9",
            "route_table_id": "rtb-0c4cec5f6e3ad334f",
            "subnet_id": "subnet-0dbf857d5bcea8720"
          },
          "dependencies": [
            "aws_eip.customer-management-nat-gateway-eip",
            "aws_nat_gateway.customer-management-nat-gateway",
            "aws_route_table.customer-management-private-rs-rt",
            "aws_subnet.customer-management-private-rs",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0720216f7aa3aa944",
            "route_table_id": "rtb-0c4cec5f6e3ad334f",
            "subnet_id": "subnet-010beb12829fc2b74"
          },
          "dependencies": [
            "aws_eip.customer-management-nat-gateway-eip",
            "aws_nat_gateway.customer-management-nat-gateway",
            "aws_route_table.customer-management-private-rs-rt",
            "aws_subnet.customer-management-private-rs",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer-management-public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cf2968093f46abb",
            "route_table_id": "rtb-0f5ee931a72ef0d96",
            "subnet_id": "subnet-0758803fa0b7f6a47"
          },
          "dependencies": [
            "aws_internet_gateway.customer-management-igw",
            "aws_route_table.customer-management-public-rt",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035d85dc2d8d80875",
            "route_table_id": "rtb-0f5ee931a72ef0d96",
            "subnet_id": "subnet-04a1018628ee65642"
          },
          "dependencies": [
            "aws_internet_gateway.customer-management-igw",
            "aws_route_table.customer-management-public-rt",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034e7662f83ff1437",
            "route_table_id": "rtb-0f5ee931a72ef0d96",
            "subnet_id": "subnet-08b31641b86ad614b"
          },
          "dependencies": [
            "aws_internet_gateway.customer-management-igw",
            "aws_route_table.customer-management-public-rt",
            "aws_subnet.customer-management-public",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "customer-management-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:security-group/sg-0edaeed68c196fcbc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edaeed68c196fcbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "customer-management-alb-sg",
            "name_prefix": "",
            "owner_id": "218459525783",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "customer-management-alb-sg"
            },
            "tags_all": {
              "Name": "customer-management-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "customer-management-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:security-group/sg-0f571d9e96914e766",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f571d9e96914e766",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "customer-management-ecs-sg",
            "name_prefix": "",
            "owner_id": "218459525783",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "customer-management-ecs-sg"
            },
            "tags_all": {
              "Name": "customer-management-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.customer-management-alb-sg",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "customer-management-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:security-group/sg-09f0aab9b64feed78",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f0aab9b64feed78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "customer-management-rds-sg",
            "name_prefix": "",
            "owner_id": "218459525783",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "customer-management-rds-sg"
            },
            "tags_all": {
              "Name": "customer-management-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.customer-management-alb-sg",
            "aws_security_group.customer-management-ecs-sg",
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer-management-private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:subnet/subnet-0b541aeb878584a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b541aeb878584a62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218459525783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-management-private-db-1a"
            },
            "tags_all": {
              "Name": "customer-management-private-db-1a"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:subnet/subnet-0dea5c6fedb3b5e2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dea5c6fedb3b5e2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218459525783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-management-private-db-2b"
            },
            "tags_all": {
              "Name": "customer-management-private-db-2b"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:subnet/subnet-07c28b63f5c4dc344",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c28b63f5c4dc344",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218459525783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-management-private-db-3a"
            },
            "tags_all": {
              "Name": "customer-management-private-db-3a"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer-management-private-rs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:subnet/subnet-020e75e062e45500a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e75e062e45500a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218459525783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-management-private-rs-1a"
            },
            "tags_all": {
              "Name": "customer-management-private-rs-1a"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:subnet/subnet-0dbf857d5bcea8720",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbf857d5bcea8720",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218459525783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-management-private-rs-2b"
            },
            "tags_all": {
              "Name": "customer-management-private-rs-2b"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:subnet/subnet-010beb12829fc2b74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010beb12829fc2b74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218459525783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-management-private-rs-3c"
            },
            "tags_all": {
              "Name": "customer-management-private-rs-3c"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer-management-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:subnet/subnet-0758803fa0b7f6a47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0758803fa0b7f6a47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218459525783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-management-public-1a"
            },
            "tags_all": {
              "Name": "customer-management-public-1a"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:subnet/subnet-04a1018628ee65642",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a1018628ee65642",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218459525783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-management-public-2b"
            },
            "tags_all": {
              "Name": "customer-management-public-2b"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:subnet/subnet-08b31641b86ad614b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b31641b86ad614b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218459525783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customer-management-public-3a"
            },
            "tags_all": {
              "Name": "customer-management-public-3a"
            },
            "vpc_id": "vpc-0c16e12295e438ba8"
          },
          "dependencies": [
            "aws_vpc.customer_management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customer_management_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218459525783:vpc/vpc-0c16e12295e438ba8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066df254ac427fa2e",
            "default_route_table_id": "rtb-01da2ff8fea90f86f",
            "default_security_group_id": "sg-0b8f30caf5e668fae",
            "dhcp_options_id": "dopt-064fa7b8df4fbf5e5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c16e12295e438ba8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01da2ff8fea90f86f",
            "owner_id": "218459525783",
            "tags": {
              "Name": "customer_management_vpc"
            },
            "tags_all": {
              "Name": "customer_management_vpc"
            }
          }
        }
      ]
    }
  ]
}